plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenLocal()
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

tasks.withType(JavaExec) {
    jvmArgs.add('--enable-preview')
}
tasks.withType(Test) {
    jvmArgs.add("--enable-preview")
}

dependencies {
// JDBC Implementation Driver
    runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
// ORM
    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.1.7.Final'

// Template code
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    testCompileOnly 'org.projectlombok:lombok:1.18.26'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
// Testing
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
}
test {
    useJUnitPlatform()
}
